--- a/src/App.css
+++ b/src/App.css
@@ -218,3 +218,78 @@ height: 135px;
 
 
 
+ 
+ /* @import url(	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500&display=swap');
+
+
+
+
+#int-text1{
+  display: flex;
+justify-content: flex-start;
+}
+
+#int-t-3{
+  display: flex;
+    justify-content: flex-start;
+    padding: 0;
+    width: 17%;
+
+}
+
+#int-t-2{
+  width: 17%;
+}
+#main{
+
+  margin-top: 160px;
+  
+  /* display: flex;
+  justify-content: center; */
+}
+#main-1{display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 36%;
+  margin-left: 105px;}
+
+
+  #main-2 img{
+    width: 371px;
+    height: 265px;
+  }
+
+  #intro-1{
+    text-align: left;
+    font: normal normal 900 15px/32px Roboto;
+    letter-spacing: 2.88px;
+    color: #08121C;
+    opacity: 1;
+  }
+  
+  #intro-2{
+    font: normal normal 900 52px/105px Roboto;
+    letter-spacing: 1.56px;
+    color: #4472F1;
+    opacity: 1;
+    text-align: left;
+  }
+  
+  #intro-3{
+    text-align: left;
+    font: normal normal normal 20px/25px Roboto;
+    letter-spacing: 0.6px;
+    color: #08121C;
+    opacity: 1;
+  }
+
+  
+#bg-img{
+  background: transparent url(http://localhost:3000/static/media/introbg.8683bff….png) no-repeat;
+    background-position: 100%;
+    background-size: 130%;
+    height: 512px;
+  
+} */
